# NEAT-AI-core

./: .codespellrc  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  bump-deps.sh  deny.toml  deny.toml.test  quality.sh  upgrade-dry-run.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  cleanup.md  feature_request.md
.github/workflows/: actionlint.yml  ci.yml  gitleaks.yml  markdown-lint.yml  release.yml  security.yml  semgrep.yml  upgrade-dependencies.yml  wasm-bundle.yml
docs/: pr-summary-13.md  pr-summary-15.md  pr-summary-21.md  pr-summary-22.md  pr-summary-3.md  pr-summary-36.md  pr-summary-6.md  pr-summary-62.md  pr-summary-63.md  pr-summary-73.md  pr-summary-77.md  pr-summary-78.md  pr-summary-8.md  security-scan-73.md
docs/archive/pr-summaries/: pr-summary-100.md  pr-summary-101.md  pr-summary-104.md  pr-summary-11.md  pr-summary-112.md  pr-summary-113.md  pr-summary-114.md  pr-summary-115.md  pr-summary-12.md  pr-summary-121.md  pr-summary-122.md  pr-summary-123.md  pr-summary-124.md  pr-summary-125.md  pr-summary-143.md  pr-summary-152.md  pr-summary-153.md  pr-summary-154.md  pr-summary-155.md  pr-summary-156.md  pr-summary-157.md  pr-summary-165.md  pr-summary-168.md  pr-summary-176.md  pr-summary-177.md  pr-summary-179.md  pr-summary-18.md  pr-summary-180.md  pr-summary-197.md  pr-summary-200.md  pr-summary-25.md  pr-summary-30.md  pr-summary-37.md  pr-summary-38.md  pr-summary-4.md  pr-summary-43.md  pr-summary-47.md  pr-summary-48.md  pr-summary-5.md  pr-summary-56.md  (+9 more)
docs/research/: ikaruga-neat-ai-comparison.md
neat-core/: Cargo.toml
neat-core/benches/: README.md  hot_paths.rs  parallel_scoring.rs
neat-core/benches/common/: mod.rs
neat-core/examples/: backprop_scratch_bench.rs  bench_single_record_weighted_sums.rs
neat-core/src/: accumulate.rs  creature.rs  derivative.rs  elastic_distribution.rs  error.rs  fused_error.rs  lib.rs  loss.rs  network.rs  parallel_scoring.rs  pc_inference.rs  pc_learning.rs  propagate_codec.rs  range.rs  safe_zone.rs  score_scan.rs  simd.rs  simd_native.rs  squash.rs  squash_simd.rs  synapse_type.rs  topological_backprop.rs  topology_export.rs  topology_ops.rs  training_bin_stream.rs  training_data.rs  training_state.rs  unsquash.rs  wasm_exports.rs
neat-core/tests/: accumulate_public.rs  bench_fixtures.rs  creature_compile.rs  derivative.rs  elastic_distribution.rs  error_calculate.rs  fused_error.rs  integration.rs  network_activate_trace_batch.rs  package_metadata.rs  parallel_scoring.rs  pc_inference.rs  pc_learning.rs  range.rs  score_scan.rs  simd_weighted_sums.rs  squash.rs  topology_export.rs  typed_errors.rs  unsquash.rs  wasm_bindgen_surface.rs
neat-core/tests/common/: mod.rs
neat-core/tests/creature/: compile_smoke.rs  main.rs  roundtrip.rs
scripts/: build-wasm-bundle.sh  check-version-bump.sh  detect-breaking.sh  next-version.sh  verify-wasm-bundle.sh
tests/scripts/: actionlint_workflow.bats  build_wasm_bundle.bats  bump_deps.bats  check_version_bump.bats  ci_workflow_quarantine.bats  dependabot_config.bats  detect_breaking.bats  gitleaks_pinned_install.bats  markdown_lint_workflow.bats  next_version.bats  pr_creator_token.bats  release_sbom.bats  rust_gates_workflow.bats  security_quarantine_override.bats  security_runbook.bats  verify_wasm_bundle.bats  wasm_bundle_provenance.bats  wasm_bundle_sbom.bats  wasm_pack_pinned_install.bats  workflow_script_injection.bats  workflow_sha_pinning.bats
