# Virtual workspace: shared native Rust (`neat-core`). WASM stays in NEAT-AI.
[workspace]
members = ["neat-core"]
resolver = "2"

[workspace.package]
version = "0.1.32"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/stSoftwareAU/NEAT-AI-core"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

[workspace.lints.clippy]
collapsible_if = "deny"
filter_next = "deny"
doc_nested_refdefs = "allow"
identity_op = "allow"
manual_is_multiple_of = "allow"
manual_memcpy = "allow"
missing_const_for_thread_local = "allow"
needless_late_init = "allow"
needless_range_loop = "allow"
neg_multiply = "allow"
same_item_push = "allow"
too_many_arguments = "allow"
uninlined_format_args = "allow"
unnecessary_cast = "allow"
