# Virtual workspace: shared native Rust (`neat-core`). WASM stays in NEAT-AI.
[workspace]
members = ["neat-core"]
resolver = "2"

[workspace.package]
version = "0.1.44"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/stSoftwareAU/NEAT-AI-core"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

# Issue #165 - enforce a deny floor at the crate root so CI fails fast when a
# contributor introduces a bare `unsafe` op inside an `unsafe fn`. `neat-core`
# carries raw-SIMD intrinsics (AVX2/FMA/NEON) with `get_unchecked` indexing, so
# every unsafe operation must sit in an explicit `unsafe { … }` block.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
collapsible_if = "deny"
filter_next = "deny"
doc_nested_refdefs = "allow"
identity_op = "allow"
manual_is_multiple_of = "allow"
manual_memcpy = "allow"
missing_const_for_thread_local = "allow"
needless_late_init = "allow"
needless_range_loop = "allow"
neg_multiply = "allow"
same_item_push = "allow"
too_many_arguments = "allow"
uninlined_format_args = "allow"
unnecessary_cast = "allow"
