[package]
name = "neat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared computation library for NEAT-AI neural network operations. Optional wasm-bindgen on wasm32 only."

[lints]
workspace = true

[lib]
crate-type = ["lib"]

# Native builds omit wasm-bindgen; WASM targets link it for `accumulate` exports.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.118"

[dev-dependencies]
tempfile = "3"
