[package]
name = "neat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared computation library for NEAT-AI neural network operations. Optional wasm-bindgen on wasm32 only."

[lints]
workspace = true

# Issue #36 - cdylib added for wasm-pack; rlib retained so native consumers
# (rust_scorer, CLI tools, native tests) continue to link as before.
[lib]
crate-type = ["cdylib", "rlib"]

# Native builds omit wasm-bindgen; WASM targets link it for `accumulate` exports.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.125"

[dev-dependencies]
tempfile = "3"
